package edu.hitsz.prop;

/**
 * 炸弹道具
 *
 * @author 200111130周忠全
 */

public class BombProp extends BaseProp{
    public BombProp(int locationX, int locationY, int speedX, int speedY) {
        super(locationX, locationY, speedX, speedY);
    }
}
